# botbot

./: .gitignore  .rustc_info.json  Cargo.toml  README.md  roles.yaml  roles.yaml.expl  worterkasten.db
src/: main.rs
src/actions/: mod.rs
src/answers/: mod.rs
src/botbot_actions/: mod.rs
src/database/: database_mgmt.rs  mod.rs
src/matrix/: matrix_mgmt.rs  mod.rs
src/message/: .mod.rs.swp  mod.rs
src/my_system/: mod.rs
