[package]
name = "botbot"
version = "0.1.1"
authors = ["vlp <thomas@criscione.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unidecode = "0.3.0"
rand = "0.8.0"
sqlite = "0.25.3"
procfs = "0.9.1"
regex = "1.4.3"
cron = "0.7.0"
chrono = "0.4.19"
rss = "1.10.0"
curl = "0.4.39"
